Internship/Internship/src/objects/Junction_Intern_Homework__c.object
<CustomObject>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Homework__c</fullName>
        <label>Homework</label>
        <referenceTo>Homework__c</referenceTo>
        <relationshipName>Junction_Intern_Homework</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Intern__c</fullName>
        <label>Intern</label>
        <referenceTo>Intern__c</referenceTo>
        <relationshipName>Junction_Intern_Homework</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Mark__c</fullName>
        <label>Mark</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sended</label>
        <type>Checkbox</type>
    </fields>
    <label>Homework Mark</label>
    <nameField>
        <label>Mark Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Homework Marks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>